packages/rocket/rocket-0.4.10/contrib/codegen/tests/ui-fail/database-syntax.stderr
error: expected string literal
 --> $DIR/database-syntax.rs:6:1
  |
6 | #[database]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `database` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected string literal
  --> $DIR/database-syntax.rs:10:12
   |
10 | #[database(1)]
   |            ^

error: expected string literal
  --> $DIR/database-syntax.rs:14:12
   |
14 | #[database(123)]
   |            ^^^

error: expected string literal
  --> $DIR/database-syntax.rs:18:12
   |
18 | #[database("hello" "hi")]
   |            ^^^^^^^^^^^^

error: `database` attribute can only be used on structs
  --> $DIR/database-syntax.rs:23:1
   |
23 | enum Foo {  }
   | ^^^^^^^^^^^^^

error: `database` attribute can only be applied to structs with exactly one unnamed field
  --> $DIR/database-syntax.rs:27:11
   |
27 | struct Bar(diesel::SqliteConnection, diesel::SqliteConnection);
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: example: `struct MyDatabase(diesel::SqliteConnection);`

error: `database` attribute can only be used on structs
  --> $DIR/database-syntax.rs:31:1
   |
31 | union Baz {  }
   | ^^^^^^^^^^^^^^

error: `database` attribute cannot be applied to structs with generics
  --> $DIR/database-syntax.rs:35:9
   |
35 | struct E<'r>(&'r str);
   |         ^^^^

error: `database` attribute cannot be applied to structs with generics
  --> $DIR/database-syntax.rs:39:9
   |
39 | struct F<T>(T);
   |         ^^^
